# semantic_3d_mapping

./: .gitignore  README.md
dense_crf/: CMakeLists.txt  package.xml  readme.md
dense_crf/include/: common.h  densecrf.h  labelcompatibility.h  objective.h  superpixel.h
dense_crf/libs/: densecrf.cpp  labelcompatibility.cpp  objective.cpp  pairwise.cpp  permutohedral.cpp  superpixel.cpp
dense_crf/nodes/: dense_inference.cpp  dense_learning.cpp  test_permutohedral.cpp
dense_crf/src/: comare_hier_dense_crf.cpp
dense_crf/test_data/: anno1.ppm  anno2.ppm  anno3.ppm  im1.ppm  im2.ppm  im3.ppm  output.ppm
dense_crf/utils/: common.cpp
dependency/: README.md
dependency/geom_cast/: .gitignore  CMakeLists.txt  README.md  package.xml
dependency/geom_cast/include/geom_cast/: geom_cast.hpp  point_cast.hpp  rot_cast.hpp
dependency/geom_cast/src/: examples.cpp
dependency/geom_cast/utest/: test.cpp
dependency/geom_cast_extra/: .gitignore  CMakeLists.txt  package.xml  readme.md
dependency/geom_cast_extra/include/geom_cast_extra/: geom_cast_extra.h
dependency/gridmapping2/: .gitignore  CMakeLists.txt  README.md  mainpage.dox  package.xml
dependency/gridmapping2/examples_src/: proxy_example1.cpp  proxy_example2.cpp  shared_grid_example.cpp  test_synch.cpp
dependency/gridmapping2/include/gridmapping2/: proxy_gridmap.hpp  shared_gridmap.hpp
dependency/gridmapping2/launch/: example1.launch
dependency/gridmapping2/src/: empty.cpp  shared_gridmap_node.cpp
dependency/pcl_util/: .gitignore  CMakeLists.txt  README.md  mainpage.dox  package.xml
dependency/pcl_util/include/pcl_util/: nea_pc_format.hpp  nea_to_pcl.hpp  pcl_util.hpp  point_cloud2_iterator.h  point_types.hpp  transform_nea_pc.hpp
dependency/pcl_util/src/: examples.cpp  pc2_iterator_examples.cpp  rgb.cpp
dependency/pcl_util/test/: gtests.cpp
dependency/scrollgrid/: .gitignore  CMakeLists.txt  README.md  mainpage.dox  package.xml
dependency/scrollgrid/include/scrollgrid/: box.hpp  dense_array2.hpp  dense_array3.hpp  fixedgrid2.hpp  fixedgrid3.hpp  grid_types.hpp  grid_util.hpp  mod_wrap.hpp  occ_raycasting.hpp  ray.hpp  raycasting.hpp  scrollgrid.hpp  scrollgrid2.hpp  scrollgrid3.hpp  scrolling_strategies.hpp  sparse_array3.hpp
dependency/scrollgrid/src/: examples.cpp
dependency/scrollgrid/tests/: scrollgrid3.cpp
grid_sensor/: .gitignore  CMakeLists.txt  download_data.sh  package.xml
grid_sensor/include/grid_sensor/: grid_sensor.hpp  grid_sensor_visualization.hpp  util.hpp
grid_sensor/install_ws/: crf_3d.rosinstall  install.sh
grid_sensor/launch/: example.launch  grid_imgs.launch
grid_sensor/params/: kitti_crf_3d.yaml
grid_sensor/rviz/: grid_crf.rviz
grid_sensor/src/: grid_sensor.cpp  main_stereo_imgs.cpp
preprocess_data/: .gitignore  README.md  change_cnn_label.m  label_colors_notes.txt  superpixel_img2bin.m
preprocess_data/code/cnn_2d/: predict_dilanet.py
preprocess_data/code/superpixel/: CMakeLists.txt  StereoSlic.cpp  StereoSlic.h  cmdline.h  main.cpp  readme.txt
preprocess_data/code/superpixel/libraries/png/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
preprocess_data/code/superpixel/libraries/png++/: error.hpp
preprocess_data/gt_label/: label_colors_notes.txt
preprocess_data/gt_label/kitti_05/: 000000.mat  000020.mat  000040.mat  000060.mat  000100.mat  000120.mat  000140.mat  000160.mat  000180.mat  000200.mat  000220.mat  000240.mat  000260.mat  000280.mat  000300.mat  000320.mat  000340.mat  000360.mat  000380.mat  000400.mat  000420.mat  000440.mat  000460.mat  000480.mat  000500.mat  000520.mat  000540.mat  000560.mat  000580.mat  000600.mat  000620.mat  000640.mat  000660.mat  000680.mat  000700.mat  000720.mat  000740.mat  000760.mat  000780.mat  000800.mat
preprocess_data/gt_label/kitti_15/: 000000.mat  000003.mat  000005.mat  000006.mat  000009.mat  000010.mat  000012.mat  000015.mat  000018.mat  000020.mat  000021.mat  000024.mat  000025.mat  000027.mat  000030.mat  000033.mat  000035.mat  000036.mat  000039.mat  000040.mat  000042.mat  000045.mat  000048.mat  000050.mat  000078.mat
preprocess_data/raw_imgs/: namelist_small.txt
